--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "18.2.0",
     "react": "18.2.0",
     "@google/genai": "0.1.0",
-    "lucide-react": "0.294.0"
+    "lucide-react": "0.294.0",
+    "firebase": "^12.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
