--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "enidai---öğrenci-takip-sistemi",
-  "private": true,
-  "version": "0.0.0",
+  "name": "enid-ai",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,16 +8,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "18.2.0",
-    "react": "18.2.0",
-    "@google/genai": "0.1.0",
-    "lucide-react": "0.294.0",
-    "firebase": "^12.6.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "firebase": "^10.7.1",
+    "lucide-react": "^0.294.0",
+    "@google/genai": "*"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0"
   }
 }
